--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,13 @@
 }
 
 body {
-  min-inline-size: 375px;
-  max-inline-size: 1440px;
   margin: 0 auto;
+  font-family: var(--main-font);
+  font-weight: 400;
+  font-size: 18px;
+  min-inline-size: 375px;
+  max-inline-size: 1024px;
+  block-size: 100%;
 }
 
 h1,
@@ -39,4 +43,43 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  cursor: pointer;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--menu-color);
+  border-left: 1px solid var(--menu-color);
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--menu-color);
+  border-right: 1px solid var(--menu-color);
+}
+
+@media (width >=768px) {
+  .decorated-zone::before {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .decorated-zone::after {
+    top: 20px;
+    right: 20px;
+  }
+}
+
+.title-decor {
+  background: var(--title-decor);
 }
