--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,17 @@
 /*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
+  das
 */
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-text-color: #353430;
+  --title-color: #ffc2e6;
+  --title-shadow: #ff0070;
+  --title-decor: #ff8dcb;
+  --hover-color: 1px solid #353430;
+  --background-color: #fff1f7;
+  --background-image: url(../images/cover-image-light.png);
+  --menu-color: var(--main-text-color);
+  --rec-color: var(--background-color);
+  --article-title-color: var(--main-text-color);
+  --section-title-color: var(--main-text-color);
+  --link-shadow: var(--title-decor);
 }
