--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,13 +4,12 @@
   переключая тему
 */
 @media (prefers-color-scheme: dark) {
-  .page.theme_dark,
-  .page.theme_auto {
+  :root {
     --main-text-color: #f1b2ce;
     --title-color: #db00ff;
     --title-shadow: #ff0070;
-    --title-decor:var(--title-shadow);
-    --hover-color: 1px solid #ff0070;
+    --title-decor: var(--title-shadow);
+    --hover-color: 1px solid rgba(255, 0, 111, 0.4);
     --background-color: #000028;
     --background-image: url(../images/cover-image-dark.png);
     --menu-color: var(--title-shadow);
@@ -19,4 +18,19 @@
     --section-title-color: var(--title-shadow);
     --link-shadow: var(--title-shadow);
   }
+}
+
+.page.theme_dark {
+  --main-text-color: #f1b2ce;
+  --title-color: #db00ff;
+  --title-shadow: #ff0070;
+  --title-decor: var(--title-shadow);
+  --hover-color: 1px solid rgba(255, 0, 111, 0.4);
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --menu-color: var(--title-shadow);
+  --rec-color: var(--title-shadow);
+  --article-title-color: var(--background-color);
+  --section-title-color: var(--title-shadow);
+  --link-shadow: var(--title-shadow);
 }
