--- a/styles/light.css
+++ b/styles/light.css
@@ -2,13 +2,12 @@
   das
 */
 @media (prefers-color-scheme: light) {
-  .page.theme_light,
-  .page.theme_auto {
+  :root {
     --main-text-color: #353430;
     --title-color: #ffc2e6;
     --title-shadow: #ff0070;
     --title-decor: #ff8dcb;
-    --hover-color: 1px solid #353430;
+    --hover-color: 1px solid rgba(53, 52, 48, 0.4);
     --background-color: #fff1f7;
     --background-image: url(../images/cover-image-light.png);
     --menu-color: var(--main-text-color);
@@ -17,4 +16,19 @@
     --section-title-color: var(--main-text-color);
     --link-shadow: var(--title-decor);
   }
+}
+
+.page.theme_light {
+  --main-text-color: #353430;
+  --title-color: #ffc2e6;
+  --title-shadow: #ff0070;
+  --title-decor: #ff8dcb;
+  --hover-color: 1px solid rgba(53, 52, 48, 0.4);
+  --background-color: #fff1f7;
+  --background-image: url(../images/cover-image-light.png);
+  --menu-color: var(--main-text-color);
+  --rec-color: var(--background-color);
+  --article-title-color: var(--main-text-color);
+  --section-title-color: var(--main-text-color);
+  --link-shadow: var(--title-decor);
 }
